--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,21 @@ textarea:focus, input:focus, select:focus {
         background-color:#ffa85f;
     }
 
+    #creditos{
+        width: 95%;
+        height: 120px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        display: flex;
+        background-color: #ffb06d;
+        align-items: center;
+
+        font-family: 'Nunito', sans-serif;
+        font-size: 20px;
+        color: #fff;
+    }
+
     .opcoes_menu{
         width: 95%;
         height: 120px;
@@ -125,12 +140,12 @@ textarea:focus, input:focus, select:focus {
         align-items: center;
 
         font-family: 'Nunito', sans-serif;
-        font-size: 50px;
+        font-size: 30px;
         color: #fff;
 
     }
 
-    .opcoes_menu img{
+    .opcoes_menu img, #imgcreditos{
         width: 100px;
         height: 100px;
         position: absolute;
@@ -606,7 +621,7 @@ textarea:focus, input:focus, select:focus {
         background-color:#ffa85f;
     }
 
-    .opcoes_menu{
+    .opcoes_menu, #creditos{
         width: 95%;
         height: 120px;
         margin-left: auto;
@@ -622,7 +637,7 @@ textarea:focus, input:focus, select:focus {
 
     }
 
-    .opcoes_menu img{
+    .opcoes_menu img, #imgcreditos{
         width: 100px;
         height: 100px;
         position: absolute;
